--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "intranet-chov",
+  "name": "soci-start",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,12 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.5"
+    "@clerk/backend": "^1.21.4",
+    "@clerk/localizations": "^3.9.5",
+    "@clerk/nextjs": "^6.9.6",
+    "@prisma/client": "^6.2.1",
+    "babel-plugin-react-compiler": "^0.0.0-experimental-938cd9a-20240601",
+    "next": "^15.2.0-canary.16",
+    "prisma": "^6.2.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "svix": "^1.45.1"
   },
   "devDependencies": {
+    "@types/node": "^20",
+    "@types/react": "19.0.3",
+    "@types/react-dom": "19.0.2",
+    "eslint": "^8",
+    "eslint-config-next": "15.1.3",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.0.3",
+    "@types/react-dom": "19.0.2"
   }
 }
